--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,17 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 8px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left-links,
+.right-links{
+  display: flex;
+
 }
 
 .logo {
@@ -9,11 +20,20 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
